--- a/web/css/connect.css
+++ b/web/css/connect.css
@@ -24,7 +24,7 @@ label {
     margin-bottom: 10px;
     margin-top: 10px;
     font-weight: bold;
-    color: var(--darkBlue1);
+    color: var(--darkSlateGrey);
 }
 
 /*--- END Form Styles ---*/
