--- a/web/css/homestyle.css
+++ b/web/css/homestyle.css
@@ -41,7 +41,7 @@ header::before {
     backdrop-filter: blur(15px);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
     z-index: -1;
-    background: var(--darkBlue2);
+    background: var(--grey3);
 }
 
 header:hover::after {
@@ -67,7 +67,7 @@ header:hover::after {
 
 
 .nav-item:hover {
-    color: var(--darkBlue2);
+    color: var(--darkSlateGrey);
     background-color: var(--white);
     text-decoration: none;
     border-radius: 1.5rem;
