--- a/ressources/css/button.css
+++ b/ressources/css/button.css
@@ -1,7 +1,7 @@
 .button {
     display: block;
     text-decoration: none;
-    background-color: var(--darkSlateGrey);
+    background-color: var(--darkBlue2);
     color: var(--white);
     width: 100%;
     padding: 15px;
