--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -1,4 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+
+.button {
+    display: block;
+    text-decoration: none;
+    background-color: var(--darkBlue2);
+    color: var(--white);
+    width: 100%;
+    padding: 15px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.2em;
+    box-shadow: inset 10px 10px 20px #ffffff45,
+    inset -10px -10px 20px #00000020,
+    10px 10px 10px #00000020,
+    -10px -10px 10px #ffffff45;
+    margin-top: 30px;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
+}
+
+.button:hover {
+    color: black;
+    opacity: 0.69;
+}
+
+.button:active {
+    color: var(--white);
+    opacity: 0.8;
+}
+
 /*---START FONTS---*/
 * {
     margin: 0;
@@ -41,14 +73,15 @@ header::before {
     backdrop-filter: blur(15px);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
     z-index: -1;
-    background: var(--grey3);
+    background: var(--darkBlue2);
 }
 
 header:hover::after {
     left: 100%;
 }
-
 /*---START NAVBAR---*/
+
+
 .nav-item {
     position: relative;
     display: inline-flex;
@@ -65,12 +98,9 @@ header:hover::after {
     border-radius: 1.5rem;
 }
 
-
 .nav-item:hover {
-    color: var(--darkSlateGrey);
+    color: var(--darkBlue2);
     background-color: var(--white);
-    text-decoration: none;
-    border-radius: 1.5rem;
     text-decoration: none;
 }
 
@@ -101,6 +131,11 @@ main {
 }
 
 /*---END MAIN---*/
+
+#logoToggle {
+    width: 5rem;
+    height: 5rem;
+}
 
 
 /*---START RESPONSIVE---*/
@@ -165,12 +200,13 @@ main {
 
 /*---END RESPONSIVE---*/
 
+
 /*---START FOOTER---*/
 footer {
     position: relative;
     left: 0;
     bottom: 0;
-    color: var(--grey3);
+    color: var(--darkBlue2);
     width: 100%;
     text-align: center; 
     font-size: 12px;
@@ -198,3 +234,72 @@ footer {
     display: block;     
     margin-bottom: 5px; 
 }
+/*!*lấy từ TD*!*/
+
+/*ul {*/
+/*    list-style: none;*/
+/*    padding-left: 0;*/
+/*    text-align: center;*/
+/*    display:flex;*/
+/*    justify-content:center;*/
+/*}*/
+
+/*ul li {*/
+/*    border-color: black;*/
+/*    border-width: 1px;*/
+/*    border-style: solid;*/
+/*}*/
+
+/*ul li:hover {*/
+/*    background-color: #c7cef5;*/
+/*}*/
+
+/*ul li:not(:first-child) {*/
+/*    border-left-width: 0;*/
+/*}*/
+
+/*ul li a {*/
+/*    text-decoration: none;*/
+/*    color: #000000;*/
+/*    padding-left: 5px;*/
+/*    padding-right: 5px;*/
+/*}*/
+
+
+/*!* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ *!*/
+/*.InputAddOn {*/
+/*    display: flex;*/
+/*    margin-bottom: 1.5em;*/
+/*}*/
+
+/*.InputAddOn-field {*/
+/*    flex: 1;*/
+/*}*/
+/*.InputAddOn-field:not(:first-child) {*/
+/*    border-left: 0;*/
+/*}*/
+/*.InputAddOn-field:not(:last-child) {*/
+/*    border-right: 0;*/
+/*}*/
+
+/*.InputAddOn-item {*/
+/*    background-color: rgba(147, 128, 108, 0.1);*/
+/*    color: #666666;*/
+/*    font: inherit;*/
+/*    font-weight: normal;*/
+/*}*/
+
+/*.InputAddOn-field,*/
+/*.InputAddOn-item {*/
+/*    border: 1px solid rgba(147, 128, 108, 0.25);*/
+/*    padding: 0.5em 0.75em;*/
+/*}*/
+/*.InputAddOn-field:first-child,*/
+/*.InputAddOn-item:first-child {*/
+/*    border-radius: 2px 0 0 2px;*/
+/*}*/
+/*.InputAddOn-field:last-child,*/
+/*.InputAddOn-item:last-child {*/
+/*    border-radius: 0 2px 2px 0;*/
+/*}*/
+
