--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -128,6 +128,7 @@ main {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin-top: 150px;
 }
 
 /*---END MAIN---*/
@@ -267,39 +268,39 @@ footer {
 
 
 /*!* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ *!*/
-/*.InputAddOn {*/
-/*    display: flex;*/
-/*    margin-bottom: 1.5em;*/
-/*}*/
+.InputAddOn {
+    display: flex;
+    margin-bottom: 1.5em;
+}
 
-/*.InputAddOn-field {*/
-/*    flex: 1;*/
-/*}*/
-/*.InputAddOn-field:not(:first-child) {*/
-/*    border-left: 0;*/
-/*}*/
-/*.InputAddOn-field:not(:last-child) {*/
-/*    border-right: 0;*/
-/*}*/
+.InputAddOn-field {
+    flex: 1;
+}
+.InputAddOn-field:not(:first-child) {
+    border-left: 0;
+}
+.InputAddOn-field:not(:last-child) {
+    border-right: 0;
+}
 
-/*.InputAddOn-item {*/
-/*    background-color: rgba(147, 128, 108, 0.1);*/
-/*    color: #666666;*/
-/*    font: inherit;*/
-/*    font-weight: normal;*/
-/*}*/
+.InputAddOn-item {
+    background-color: rgba(147, 128, 108, 0.1);
+    color: #666666;
+    font: inherit;
+    font-weight: normal;
+}
 
-/*.InputAddOn-field,*/
-/*.InputAddOn-item {*/
-/*    border: 1px solid rgba(147, 128, 108, 0.25);*/
-/*    padding: 0.5em 0.75em;*/
-/*}*/
-/*.InputAddOn-field:first-child,*/
-/*.InputAddOn-item:first-child {*/
-/*    border-radius: 2px 0 0 2px;*/
-/*}*/
-/*.InputAddOn-field:last-child,*/
-/*.InputAddOn-item:last-child {*/
-/*    border-radius: 0 2px 2px 0;*/
-/*}*/
+.InputAddOn-field,
+.InputAddOn-item {
+    border: 1px solid rgba(147, 128, 108, 0.25);
+    padding: 0.5em 0.75em;
+}
+.InputAddOn-field:first-child,
+.InputAddOn-item:first-child {
+    border-radius: 2px 0 0 2px;
+}
+.InputAddOn-field:last-child,
+.InputAddOn-item:last-child {
+    border-radius: 0 2px 2px 0;
+}
 
