--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -128,7 +128,7 @@ main {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 /*---END MAIN---*/
@@ -237,34 +237,27 @@ footer {
 }
 /*!*lấy từ TD*!*/
 
-/*ul {*/
-/*    list-style: none;*/
-/*    padding-left: 0;*/
-/*    text-align: center;*/
-/*    display:flex;*/
-/*    justify-content:center;*/
-/*}*/
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 20px 0;
+}
 
-/*ul li {*/
-/*    border-color: black;*/
-/*    border-width: 1px;*/
-/*    border-style: solid;*/
-/*}*/
+ul li {
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    line-height: 1.5;
+    background-color: #f9f9f9;
+}
 
-/*ul li:hover {*/
-/*    background-color: #c7cef5;*/
-/*}*/
-
-/*ul li:not(:first-child) {*/
-/*    border-left-width: 0;*/
-/*}*/
-
-/*ul li a {*/
-/*    text-decoration: none;*/
-/*    color: #000000;*/
-/*    padding-left: 5px;*/
-/*    padding-right: 5px;*/
-/*}*/
+ul li:hover {
+    background-color: #e0e0e0;
+    transition: background-color 0.3s ease;
+}
 
 
 /*!* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ *!*/
@@ -304,3 +297,24 @@ footer {
     border-radius: 0 2px 2px 0;
 }
 
+form {
+    /*//border: 2px solid b;*/
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f9;
+    max-width: 600px;
+    margin: 20px auto;
+}
+
+fieldset {
+    border: none;
+    padding: 0;
+}
+
+legend {
+    font-weight: bold;
+    color: var(--darkBlue2);
+    padding-bottom: 10px;
+    font-size: 1.5rem;
+}
