--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -318,3 +318,29 @@ legend {
     padding-bottom: 10px;
     font-size: 1.5rem;
 }
+
+.button-submit {
+    background-color: var(--darkBlue2);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.button-submit:hover {
+    background-color: var(--lightBlue);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.button-submit:disabled {
+    background-color: grey;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
