--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -3,7 +3,7 @@
 .button {
     display: block;
     text-decoration: none;
-    background-color: var(--darkBlue2);
+    background-color: var(--rougeUM);
     color: var(--white);
     width: 100%;
     padding: 15px;
@@ -73,7 +73,7 @@ header::before {
     backdrop-filter: blur(15px);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
     z-index: -1;
-    background: var(--darkBlue2);
+    background: var(--rougeUM);
 }
 
 header:hover::after {
@@ -99,7 +99,7 @@ header:hover::after {
 }
 
 .nav-item:hover {
-    color: var(--darkBlue2);
+    color: var(--rougeUM);
     background-color: var(--white);
     text-decoration: none;
 }
@@ -207,7 +207,7 @@ footer {
     position: relative;
     left: 0;
     bottom: 0;
-    color: var(--darkBlue2);
+    color: var(--rougeUM);
     width: 100%;
     text-align: center; 
     font-size: 12px;
@@ -320,7 +320,7 @@ legend {
 }
 
 .button-submit {
-    background-color: var(--darkBlue2);
+    background-color: var(--rougeUM);
     color: white;
     border: none;
     border-radius: 5px;
@@ -333,7 +333,7 @@ legend {
 }
 
 .button-submit:hover {
-    background-color: var(--lightBlue);
+    background-color: var(--rougeUM);
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
 }
 
