--- a/ressources/css/connect.css
+++ b/ressources/css/connect.css
@@ -1,8 +1,7 @@
 .container {
     padding: 20px;
     min-width: 330px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
     display: inline-block;
     text-align: center;
     max-width: 400px;
@@ -23,15 +22,82 @@ label {
     color: black;
 }
 
-input[type="text"], 
+input[type="text"],
 input[type="password"] {
-    width: 100%; 
-    padding: 10px; 
+    width: 100%;
+    padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px; 
-    box-sizing: border-box; 
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 button[type="submit"] {
-    width: 100%; 
+    width: 100%;
+}
+
+/*!* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ *!*/
+/* Styles for form */
+form {
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+    background-color: #f9f9f9;
+    max-width: 500px;
+    margin: 40px auto;
+}
+
+/* Styles for fieldset */
+fieldset {
+    border: none;
+    padding: 0;
+}
+
+/* Form heading */
+h2 {
+    text-align: left;
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+/* Adjustments for input fields and labels */
+.InputAddOn {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+/* Customize input field */
+.InputAddOn-field {
+    flex: 1;
+    padding: 12px;
+    font-size: 1rem;
+    border: 1px solid rgba(147, 128, 108, 0.25);
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    transition: border 0.3s ease;
+}
+
+
+/* Customize labels */
+.InputAddOn-item {
+    font-size: 0.9rem;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+/* Submit button */
+#connectButton {
+    padding: 12px;
+    font-size: 1.2rem;
+    background-color: var(--rougeUM);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100%;
+}
+
+#connectButton:hover {
+    background-color: var(--lightBlue);
 }
