--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -1,36 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
-.button {
-    display: block;
-    text-decoration: none;
-    background-color: var(--rougeUM);
-    color: var(--white);
-    width: 100%;
-    padding: 15px;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1.2em;
-    box-shadow: inset 10px 10px 20px #ffffff45,
-    inset -10px -10px 20px #00000020,
-    10px 10px 10px #00000020,
-    -10px -10px 10px #ffffff45;
-    margin-top: 30px;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
-}
-
-.button:hover {
-    color: black;
-    opacity: 0.69;
-}
-
-.button:active {
-    color: var(--white);
-    opacity: 0.8;
-}
-
 /*---START FONTS---*/
 * {
     margin: 0;
@@ -135,6 +104,16 @@ main {
 
 #logoToggle {
     width: 5rem;
+    height: 5rem;
+}
+
+#logoIUT {
+    width: 10rem;
+    height: 5rem;
+}
+
+#logoUM {
+    width: 13.5rem;
     height: 5rem;
 }
 
@@ -260,65 +239,6 @@ ul li:hover {
 }
 
 
-/*!* https://philipwalton.github.io/solved-by-flexbox/demos/input-add-ons/ *!*/
-.InputAddOn {
-    display: flex;
-    margin-bottom: 1.5em;
-}
-
-.InputAddOn-field {
-    flex: 1;
-}
-.InputAddOn-field:not(:first-child) {
-    border-left: 0;
-}
-.InputAddOn-field:not(:last-child) {
-    border-right: 0;
-}
-
-.InputAddOn-item {
-    background-color: rgba(147, 128, 108, 0.1);
-    color: #666666;
-    font: inherit;
-    font-weight: normal;
-}
-
-.InputAddOn-field,
-.InputAddOn-item {
-    border: 1px solid rgba(147, 128, 108, 0.25);
-    padding: 0.5em 0.75em;
-}
-.InputAddOn-field:first-child,
-.InputAddOn-item:first-child {
-    border-radius: 2px 0 0 2px;
-}
-.InputAddOn-field:last-child,
-.InputAddOn-item:last-child {
-    border-radius: 0 2px 2px 0;
-}
-
-form {
-    /*//border: 2px solid b;*/
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-    max-width: 600px;
-    margin: 20px auto;
-}
-
-fieldset {
-    border: none;
-    padding: 0;
-}
-
-legend {
-    font-weight: bold;
-    color: var(--darkBlue2);
-    padding-bottom: 10px;
-    font-size: 1.5rem;
-}
-
 .button-submit {
     background-color: var(--rougeUM);
     color: white;
@@ -343,4 +263,5 @@ legend {
     cursor: not-allowed;
     opacity: 0.7;
 }
+
 
