--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -25,10 +25,7 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 13;
-    display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.06);
 }
 
@@ -91,13 +88,12 @@ body {
 main {
     width: 100%;
     height: 100%;
-    margin-top: 100px;
+    margin-top: 140px;
     display: flex;
     flex: 1;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin-top: 100px;
 }
 
 /*---END MAIN---*/
@@ -196,31 +192,38 @@ footer {
     bottom: 0;
     color: var(--rougeUM);
     width: 100%;
-    text-align: center; 
+    text-align: center;
     font-size: 12px;
     font-weight: bold;
     background: var(--footer);
-    padding: 3%;
+    padding: 1%;
     box-shadow: 0 2px 8px rgba(31, 38, 135, 0.1), 0 4px 16px rgba(31, 38, 135, 0.1);
     z-index: 11;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .VBox {
     display: flex;
     flex-direction: column;
-    justify-content: center; 
-    align-items: center;    
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
+#footer-main-vbox {
+    display: flex;
+    flex-direction: column;
+    gap: 30px; /* Ajuste la valeur pour l'espacement souhaité */
+}
+
+
 #footer-team {
-    text-align: center;  
+    text-align: center;
 }
 
 #footer-team p, #footer-team a {
-    display: block;     
-    margin-bottom: 5px; 
+    display: block;
+    margin-bottom: 5px;
 }
 
 /*!*= TD*!*/
