--- a/ressources/css/connect.css
+++ b/ressources/css/connect.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     display: inline-block;
     text-align: center;
-    max-width: 400px;
+    max-width: 1000px;
     margin: 0 auto;
     margin-top: 50px;
 }
@@ -54,6 +54,7 @@ fieldset {
 
 /* Form heading */
 h2 {
+    margin-top: 2rem;
     text-align: left;
     font-size: 1.5rem;
     margin-bottom: 20px;
