--- a/ressources/css/button.css
+++ b/ressources/css/button.css
@@ -27,3 +27,30 @@
     color: var(--white);
     opacity: 0.8;
 }
+
+
+.button-submit {
+    background-color: var(--rougeUM);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.button-submit:hover {
+    background-color: var(--rougeUM);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.button-submit:disabled {
+    background-color: grey;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
