--- a/ressources/css/button.css
+++ b/ressources/css/button.css
@@ -9,7 +9,7 @@
     border-radius: 15px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1.1em;
     box-shadow: inset 10px 10px 20px #ffffff45,
     inset -10px -10px 20px #00000020,
     10px 10px 10px #00000020,
@@ -43,8 +43,7 @@
 }
 
 .button-submit:hover {
-    background-color: var(--rougeUM);
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+    opacity: 0.69;
 }
 
 
