--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -45,6 +45,18 @@ header::before {
 header:hover::after {
     left: 100%;
 }
+
+/*---START BODY---*/
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: var(--background);
+    background-position: center;
+    -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
+}
+
 /*---START NAVBAR---*/
 
 
@@ -119,6 +131,60 @@ main {
     opacity: 0.5;
 }
 
+/*START BURGER*/
+
+/* Icon burger */
+#burgerIcon {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: var(--lightGrey);
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 1001; /* Để icon nằm trên menu */
+}
+
+#burger {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--rougeUM);
+    transition: right 0.3s ease;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0;
+}
+
+#burgerToggle:checked + #burgerIcon + #burger {
+    right: 0;
+}
+
+#burger .item {
+    padding: 1rem;
+    color: var(--lightGrey);
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.05rem;
+    width: auto;
+    margin: 0.5rem 0;
+    transition: all 0.3s ease-in-out;
+    border-radius: 1.5rem;
+}
+
+#burger .item:hover {
+    color: var(--rougeUM);
+    background-color: var(--white);
+    text-decoration: none;
+}
+
+
 /*---START RESPONSIVE---*/
 @media (max-width: 41200px) {
     header {
@@ -176,6 +242,15 @@ main {
         align-items: center;
         width: 100%;
         height: 100%;
+    }
+
+    #burgerIcon {
+        display: block;
+    }
+
+    /* Ẩn navbar chính khi màn hình nhỏ */
+    .navbar {
+        display: none;
     }
 }
 
