--- a/ressources/css/connect.css
+++ b/ressources/css/connect.css
@@ -36,7 +36,7 @@ label {
     margin-bottom: 10px;
     margin-top: 10px;
     font-weight: bold;
-    color: black;
+    /*color: black;*/
 }
 
 input[type="text"],
@@ -58,7 +58,7 @@ form {
     border-radius: 10px;
     padding: 30px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9;*/
     max-width: 500px;
     margin: 40px auto;
     text-align: left;
@@ -102,7 +102,7 @@ h2 {
 /* Customize labels */
 .InputAddOn-item {
     font-size: 0.9rem;
-    color: #333;
+    /*color: #333;*/
     margin-bottom: 5px;
 }
 
