--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -27,23 +27,7 @@ header {
     z-index: 13;
     flex-direction: row;
     box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.06);
-}
-
-header::before {
-    content: "";
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(15px);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
-    z-index: -1;
     background: var(--rougeUM);
-}
-
-header:hover::after {
-    left: 100%;
 }
 
 /*---START BODY---*/
@@ -184,7 +168,6 @@ main {
     text-decoration: none;
 }
 
-
 /*---START RESPONSIVE---*/
 @media (max-width: 41200px) {
     header {
@@ -251,6 +234,10 @@ main {
     .navbar {
         display: none;
     }
+
+    #accessibilityButton {
+        right: 100px;
+    }
 }
 
 /*---END RESPONSIVE---*/
@@ -304,11 +291,11 @@ ul li {
     margin-bottom: 10px;
     border-radius: 5px;
     line-height: 1.5;
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9;*/
 }
 
 ul li:hover {
-    background-color: #e0e0e0;
+    /*background-color: #e0e0e0;*/
     transition: background-color 0.3s ease;
 }
 
