--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
-/*---START FONTS---*/
+/*font*/
 * {
     margin: 0;
     padding: 0;
@@ -8,9 +8,7 @@
     font-family: "Roboto", sans-serif;
 }
 
-/*---END FONTS---*/
-
-/*---START HEADER---*/
+/*header*/
 html {
     scroll-behavior: smooth;
 }
@@ -30,7 +28,7 @@ header {
     background: var(--rougeUM);
 }
 
-/*---START BODY---*/
+/*body*/
 body {
     display: flex;
     flex-direction: column;
@@ -41,8 +39,7 @@ body {
     overflow-x: hidden;
 }
 
-/*---START NAVBAR---*/
-
+/*navbar*/
 
 .nav-item {
     position: relative;
@@ -66,18 +63,7 @@ body {
     text-decoration: none;
 }
 
-/*---START BODY---*/
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background: var(--background);
-    background-position: center;
-    -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
-}
-
-/*---START MAIN---*/
+/*main*/
 main {
     width: 100%;
     height: 100%;
@@ -88,8 +74,7 @@ main {
     justify-content: space-around;
     align-items: center;
 }
-
-/*---END MAIN---*/
+/*logo*/
 
 #logoToggle {
     width: 5rem;
@@ -115,9 +100,8 @@ main {
     opacity: 0.5;
 }
 
-/*START BURGER*/
+/*burger*/
 
-/* Icon burger */
 #burgerIcon {
     display: none;
     font-size: 50px;
@@ -184,7 +168,7 @@ main {
     align-items: center;
 }
 
-/*---START RESPONSIVE---*/
+/*responsive*/
 @media (max-width: 41200px) {
     header {
         padding: .9rem 16%;
@@ -256,10 +240,9 @@ main {
     }
 }
 
-/*---END RESPONSIVE---*/
 
+/*footer*/
 
-/*---START FOOTER---*/
 footer {
     position: relative;
     left: 0;
@@ -320,7 +303,7 @@ legend {
 }
 
 
-/*COOKIE*/
+/*cookie banner*/
 #cookie-banner {
     position: fixed;
     bottom: 0;
@@ -328,37 +311,28 @@ legend {
     background-color: var(--rougeUM);
     color: #000;
     padding: 20px;
-    text-align: center;
-    z-index: 1000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
     z-index: 12;
 }
 
 #cookie-banner h2 {
     font-size: 1.5em;
-    margin-bottom: 10px;
-    margin-left: 20px;
+    margin: 0 20px 10px 20px;
     flex-basis: 100%;
-    text-align: left;
 }
 
 #cookie-banner p {
-    display: inline-block;
-    vertical-align: middle;
-    margin: 0 40px 0 20px;
-    justify-content: center;
+    margin: 0 20px;
     text-align: justify;
 }
 
 #cookie-banner a {
-    background-color: transparent;
-    border: none;
+    background: none;
     color: #000;
-    cursor: pointer;
     font-size: 20px;
+    cursor: pointer;
     position: absolute;
     right: 20px;
     top: 20px;
