add keyframe + test deconnecter

--- a/ressources/css/messageFlash.css
+++ b/ressources/css/messageFlash.css
@@ -1,12 +1,42 @@
 .alert {
     opacity: 0;
     position: absolute;
-    top: 90px;
+    top: 120px;
     padding: 15px;
     margin-bottom: 20px;
     border-radius: 1.5rem;
     z-index: 5;
     animation: slideDown 1s, fadeOut 9.5s 1s;
+}
+
+@keyframes slideDown {
+    0% {
+        transform: translateY(-100%);
+        opacity: 0.9;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 0.9;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 0.9;
+        z-index: 5;
+    }
+    90% {
+        opacity: 0.9;
+        z-index: 5;
+    }
+    99% {
+        opacity: 0;
+        z-index: 5;
+    }
+    100% {
+        opacity: 0;
+        z-index: -1;
+    }
 }
 
 .alert-success {
