--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -66,7 +66,7 @@ body {
 /*main*/
 main {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin-top: 140px;
     display: flex;
     flex: 1;
@@ -74,6 +74,7 @@ main {
     justify-content: space-around;
     align-items: center;
 }
+
 /*logo*/
 
 #logoToggle {
@@ -242,13 +243,10 @@ main {
 
 
 /*footer*/
-
 footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    color: var(--rougeUM);
+    margin-top: auto;
     width: 100%;
+    color: var(--rougeUM);
     text-align: center;
     font-size: 12px;
     font-weight: bold;
@@ -256,7 +254,6 @@ footer {
     padding: 1%;
     box-shadow: 0 2px 8px rgba(31, 38, 135, 0.1), 0 4px 16px rgba(31, 38, 135, 0.1);
     z-index: 11;
-    margin-top: 20px;
 }
 
 .VBox {
