--- a/ressources/css/homestyle.css
+++ b/ressources/css/homestyle.css
@@ -91,9 +91,9 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 100%; /* Directly below the button */
-    left: 50%; /* Centered relative to the button */
-    transform: translateX(-30%); /* Adjusts for perfect centering */
+    top: 100%;
+    left: 50%;
+    transform: translateX(-30%);
     min-width: 110px;
     z-index: 1;
     border-radius: 1.5rem;
@@ -106,15 +106,15 @@ body {
     color: var(--rougeUM);
     padding: 12px 16px;
     text-decoration: none;
-    display: flex; /* Use flex for centering */
-    justify-content: center; /* Horizontally center text */
-    align-items: center; /* Vertically center text */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: bold;
     transition: background-color 0.3s ease;
     background-color: var(--white);
     border-radius: 1.5rem;
     margin: 5px 0;
-    text-align: center; /* Ensure text alignment for safety */
+    text-align: center;
 }
 
 .dropdown-content a:hover {
@@ -341,6 +341,18 @@ main {
 
     #accessibilityButton {
         right: 100px;
+    }
+    .dropdown-content {
+        display: inline-flex;
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-30%);
+        min-width: 110px;
+        z-index: 1;
+        border-radius: 1.5rem;
+        padding: 0;
+        background-color: transparent;
     }
 }
 
