--- a/ressources/css/detailEtudiant.css
+++ b/ressources/css/detailEtudiant.css
@@ -1,26 +1,66 @@
 /* For detailEtudiant and detailEtudiantPourEcoles only */
+/* General Style for Details */
 .etudiant-details {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
+    word-wrap: break-word;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .etudiant-details h2 {
     text-align: center;
-    color: #2c3e50;
+    color: #1d1d1f;
+    font-size: 1.5rem;
+}
+
+.etudiant-details p {
+    font-size: 16px;
+    line-height: 1.5;
+    max-width: 100%;
+}
+
+.etudiant-details .specialite {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
+
+@media (max-width: 768px) {
+    .etudiant-details {
+        padding: 15px;
+    }
+
+    .etudiant-details p {
+        font-size: 14px;
+    }
+}
+
+.specialite-long-text {
+    white-space: normal;
+    word-wrap: break-word;
+}
+
+
+.etudiant-details h2 {
+    text-align: center;
+    color: #1d1d1f;
 }
 
 .semester-details {
-    background-color: #f4f4f9;
+    background-color: #fff8f7;
     margin-top: 20px;
     padding: 15px;
     border-radius: 5px;
 }
 
 .semester-details h3 {
-    color: #2980b9;
+    color: #FF5660;
 }
 
 .ue-detail {
@@ -28,20 +68,15 @@
 }
 
 .ue-detail h4 {
-    color: #3498db;
+    color: #FF5660;
 }
 
 .ue-detail p {
     color: #555;
 }
 
-.etudiant-details p {
-    font-size: 16px;
-    line-height: 1.5;
-}
-
 .etudiant-details p strong {
-    color: #2980b9;
+    color: #FF5660;
 }
 
 table {
@@ -57,7 +92,7 @@ th, td {
 }
 
 th {
-    background-color: #3498db;
+    background-color: #FF5660;
     color: white;
 }
 
@@ -80,13 +115,18 @@ tr:hover {
     font-size: 1.05rem;
     width: 110px;
     height: 50px;
-    margin-left: 2.5rem;
     transition: all 0.3s ease-in-out;
     border-radius: 1.5rem;
+    margin-bottom: 15px;
 }
 
 .return-item:hover {
     color: var(--white);
     background-color: var(--pastelRed);
     text-decoration: none;
+}
+
+.button {
+    margin-top: -10px;
+    margin-bottom: 15px;
 }
