--- a/ressources/css/detailEtudiant.css
+++ b/ressources/css/detailEtudiant.css
@@ -7,7 +7,7 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 30px;
     word-wrap: break-word;
-    max-width: 800px;
+    width: 66%;
     margin-left: auto;
     margin-right: auto;
 }
