--- a/ressources/css/connect.css
+++ b/ressources/css/connect.css
@@ -11,7 +11,7 @@
     border-radius: 10px;
     display: inline-block;
     text-align: center;
-    max-width: 1000px;
+    width: 33%;
     margin: 0 auto;
     margin-top: 50px;
 }
